--- a/xyc-mall-parent/pom.xml
+++ b/xyc-mall-parent/pom.xml
@@ -8,12 +8,12 @@
     <artifactId>xyc-mall-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>xyc-mall-api</module>
-        <module>xyc-mall-application</module>
-        <module>xyc-mall-service</module>
-        <module>xyc-mall-common</module>
-        <module>xyc-mall-job</module>
-        <module>xyc-mall-generator</module>
+        <module>mall-common</module>
+        <module>mall-member</module>
+        <module>mall-order</module>
+        <module>mall-product</module>
+        <module>mall-ware</module>
+        <module>mall-coupon</module>
 
     </modules>
     <packaging>pom</packaging>
