--- a/xyc-mall-parent/pom.xml
+++ b/xyc-mall-parent/pom.xml
@@ -4,9 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.xyc.shoppingmall</groupId>
+    <groupId>com.xyc.mall</groupId>
     <artifactId>xyc-mall-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>xyc-mall-parent</name>
+    <description>微服务架构电商后端</description>
     <modules>
         <module>mall-common</module>
         <module>mall-member</module>
