1. 加入OpenFeign服务调用 2. 加入Nacos配置中心 3. 加入Gateway网关服务, 测试基础路由规则

--- a/xyc-mall-parent/pom.xml
+++ b/xyc-mall-parent/pom.xml
@@ -17,6 +17,7 @@
         <module>mall-coupon</module>
         <module>renren-fast-master</module>
         <module>mall-commons</module>
+        <module>mall-gateway</module>
 
 
     </modules>
