--- a/xyc-mall-parent/mall-order/src/main/resources/application.yml
+++ b/xyc-mall-parent/mall-order/src/main/resources/application.yml
@@ -1,22 +1,27 @@
-spring:
-  datasource:
-    username: root
-    password: root
-    url: jdbc:mysql://192.168.56.11:3306/mall-oms
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8849
-  application:
-    name: mall-order
-
-
-mybatis-plus:
-  mapper-locations: classpath*:/mapper/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto #主键自增
-
-server:
-  port: 8030
+#spring:
+#  datasource:
+#    username: root
+#    password: root
+#    url: jdbc:mysql://192.168.56.11:3306/mall-oms
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 192.168.56.11:8849
+#  application:
+#    name: mall-order
+#
+#
+#mybatis-plus:
+#  mapper-locations: classpath*:/mapper/**/*.xml
+#  global-config:
+#    db-config:
+#      id-type: auto #主键自增
+#
+#server:
+#  port: 8030
+#
+##尝试在yml文件中加入配置信息
+#user:
+#  userName: xinyuchen
+#  age: 100
