配置路由,跨域,完成三级目录分类

--- a/xyc-mall-parent/mall-gateway/src/main/resources/application.yml
+++ b/xyc-mall-parent/mall-gateway/src/main/resources/application.yml
@@ -15,6 +15,18 @@ spring:
           uri: https://bilibili.com/
           predicates:
             - Query=web,bilibili
+        - id: product_route
+          uri: lb://mall-product
+          predicates:
+            - Path=/app/product/**
+          filters:
+            - RewritePath=/app/(?<segment>/?.*), /$\{segment}
+        - id: app_route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/app/**
+          filters:
+            - RewritePath=/app/(?<segment>/?.*), /renren-fast/$\{segment}
 
 server:
   port: 8070
