--- a/xyc-mall-parent/renren-fast-master/src/main/resources/application.yml
+++ b/xyc-mall-parent/renren-fast-master/src/main/resources/application.yml
@@ -39,6 +39,12 @@ spring:
     throw-exception-if-no-handler-found: true
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.56.11:8849
+  application:
+    name: renren-fast
 #  resources:
 #    add-mappings: false
 
